Improve support for C-style comments.

--- a/filetypes.Towntalk.conf
+++ b/filetypes.Towntalk.conf
@@ -2,9 +2,7 @@
 # Geany configuration file for partial syntax-highlighting and function-list support.
 # Copy into ".config/geany/filedefs" and add "Towntalk=*.tt;*.tfp;*.tfx;*.tta;" to the [Extensions] section of "filetype_extensions.conf".
 
-# The '_/' division and backtick (`) infix operator should be used to avoid confusing the C-lexer.
-# Comment-highlighting can be achieved using rem {/* ... */}, /*{ ... }*/, or //# ...
-# "/* {...}" is equivalent to "rem {...}", "*/" and "//" are ignored declarations and statements.
+# The '_/' division, backtick (`) infix operator and C-style comments ('//..', '/*...*/') should be used to avoid confusing the C-lexer.
 
 [styling=C]
 
